add 'length' page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <ul>
         <li><a href="pinned-menu/pinned.html">pinned menu</a></li>
+        <li><a href="sliding-menu/sliding.html">sliding menu</a></li>
+        <li><a href="length/length.html">length</a></li>
     </ul>
-</body>
+    </ul>
 </html>
