add flexbox diagonal layout

--- a/flex-box/flexbox.html
+++ b/flex-box/flexbox.html
@@ -37,6 +37,14 @@
         <div class="flexbox-item item3">3</div>
     </div>
 
+    <br>
+
+    <div class="flexbox-container container diagonal">
+        <div class="flexbox-item item1">1</div>
+        <div class="flexbox-item item2">2</div>
+        <div class="flexbox-item item3">3</div>
+    </div>
+
 </body>
 
 </html>
