use pseudo classes :link and :visited

--- a/tests/test1.html
+++ b/tests/test1.html
@@ -21,6 +21,9 @@
             padding-left: 20px;
         }
 
+        a:link, a:visited {
+            color: rebeccapurple;
+        }
         a:hover {
             color: green;
         }
